@@ -1,0 +1,15 @@
+#if neko
+import chx.net.TcpSocket;
+#end
+
+#if flash9
+import flash.events.Event;
+import flash.display.MovieClip;
+import flash.xml.XML;
+#end
+
+import chx.sys.TestDeleteMe;
+//import chx.sys.D;
+import chx.sys.MyTypedef;
+import chx.sys.MyTypedef2;
+//import StdTypes;
