@@ -1,0 +1,6 @@
+package chx.sys;
+
+class D {
+	public function new() {
+	}
+}
